begin updating
