# server/src/routes/geoRoute.js
@@ -1,17 +1,9 @@
 const { body, param, oneOf } = require('express-validator');
 const { validate, authorize } = require('../utils.js');
-const NodeGeocoder = require('node-geocoder');
 
 const express = require('express');
 const router = express.Router();
 
-const geocoderOptions = {
-    provider: 'mapquest',
-    apiKey: '***REMOVED***', // for Mapquest, OpenCage, Google Premier
-    formatter: null, // 'gpx', 'string', ...
-};
-
-const geocoder = NodeGeocoder(geocoderOptions);
 
 /**
  * Get geo location from place name
@@ -22,13 +14,50 @@ router.get(
     param('place').isString(),
     validate,
     async (req, res) => {
-        const result = await geocoder.geocode({
-            address: 'req.params.place',
-            countryCode: 'se',
-            limit: 5,
-        });
-        if (!result) return res.status(404).send('Place not found');
-        return res.status(200).send(result);
+        const geoData = await (
+            await fetch(
+                'http://open.mapquestapi.com/nominatim/v1/search.php?key=***REMOVED***&countrycodes=se&format=json&q=' +
+                    req.params['place']
+            )
+        ).json();
+
+        /*const geoData = await geoApi.geoPlaceGet(accents(query), {
+        headers: { authorization: `Bearer ${token}` },
+    });*/
+        try {
+            return res.status(200).send({ latitude: geoData.lat, longitude: geoData.lon, address: req.params['place']});
+        } catch (error) {
+            if (error.name === 'TypeError') {
+                return res.status(404).send('Place not found');
+            } else throw error;
+        }
+    }
+);
+
+router.get(
+    '/reverse',
+    authorize,
+    query('lat').isNumber(),
+    query('lng').isNumber(),
+    validate,
+    async (req, res) => {
+        const geoData = await (
+            await fetch(
+                'http://open.mapquestapi.com/nominatim/v1/reverse.php?key=***REMOVED***&format=json&lat=' +
+                req.query['place'] + '&lon=' + req.query['place']
+            )
+        ).json();
+
+        /*const geoData = await geoApi.geoPlaceGet(accents(query), {
+        headers: { authorization: `Bearer ${token}` },
+    });*/
+        try {
+            return res.status(200).send({ latitude: geoData.lat, longitude: geoData.lon, address: req.params['place']});
+        } catch (error) {
+            if (error.name === 'TypeError') {
+                return res.status(404).send('Place not found');
+            } else throw error;
+        }
     }
 );
 
